No-Cache index.html

--- a/asivamosffie.web/asivamosffie/src/index.html
+++ b/asivamosffie.web/asivamosffie/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Asivamosffie</title>
   <base href="/">
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+  <meta http-equiv="expires" content="0">
+  <meta http-equiv="pragma" content="no-cache">
   <meta name="description" content="Es un sistema transaccional web que permite realizar la gestión en línea de los proyectos de
   infraestructura, integrando los procesos de las áreas que intervienen: jurídica, técnica y financiera y
   siguiendo las etapas del ciclo de gestión de proyectos: i) inicio, ii) seguimiento y control, iii) cierre y
