--- a/asivamosffie.web/asivamosffie/src/index.html
+++ b/asivamosffie.web/asivamosffie/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Asivamosffie</title>
   <base href="/">
-  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+  <meta http-equiv="Cache-Control" content="no-store" />
   <meta http-equiv="expires" content="0">
   <!-- <meta http-equiv="pragma" content="no-cache">-->
   <meta name="description" content="Es un sistema transaccional web que permite realizar la gestión en línea de los proyectos de
